--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,3 +6,5 @@
 #CONFIG_ZMK_DISPLAY=y
 #CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
+
