--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,10 +1,2 @@
-# Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-
-# Uncomment the following line to enable the Corne OLED Display
-#CONFIG_ZMK_DISPLAY=y
-#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6
-
+CONFIG_ZMK_EXT_POWER=n
