--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,10 @@
 ---
 include:
   - board: nice_nano_v2
+    shield: temper_left
+  - board: nice_nano_v2
+    shield: temper_right
+  - board: nice_nano_v2
     shield: corne_left
   - board: nice_nano_v2
     shield: corne_right
