Fix connection issues for temper?

--- a/boards/shields/temper/temper.conf
+++ b/boards/shields/temper/temper.conf
@@ -1,7 +1,1 @@
-# Enable deep sleep
-CONFIG_ZMK_SLEEP=y
-
-# Enable the OLED display
-CONFIG_ZMK_DISPLAY=n
-
-CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
