--- a/build.yaml
+++ b/build.yaml
@@ -21,7 +21,11 @@ include:
     shield: temper_left
   - board: nice_nano_v2
     shield: temper_right
-  - board: nice_nano_v2
-    shield: corne_left
-  - board: nice_nano_v2
-    shield: corne_right
+  - board: seeeduino_xiao_ble
+    shield: totem_left
+  - board: seeeduino_xiao_ble
+    shield: totem_right
+  - board: seeeduino_xiao_ble
+    shield: totem_dongle
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
