--- a/includes/keymap.dtsi
+++ b/includes/keymap.dtsi
@@ -192,25 +192,7 @@ keymap {
   compatible = "zmk,keymap";
 
   BASE { 
-    // TARMAK 1
-    bindings = <
-      // ROW 1
-      &kp Q            &kp W            &kp J            &kp R             &kp T
-      &kp Y            &kp U            &kp I            &kp O             &kp P
-      // ROW 2
-      &lhm LSHFT A     &lhm LCTRL S     &lhm LALT D      &lhm LGUI F       &lhm MEH G
-      &rhm MEH H       &rhm RGUI N      &rhm RALT E      &rhm RCTRL L      &rhm RSHFT SQT
-      // ROW 3
-      &kp Z            &kp X            &kp C            &kp V             &kp B
-      &kp K            &kp M            &scomma          &codot            &kp FSLH
-      // THUMBS
-      &mtb MEH DEL     &lhp NUM ESC    &mt LSHFT TAB
-                                                         &mqt RCTRL RET    &ltb NAV SPC     &mtb MEH BSPC
-    >;
-  };
-
-  ALT { 
-    // TARMAK-DH 2 (still no hm)
+    // TARMAK-DH 2 (no hm)
     bindings = <
       // ROW 1
       &kp Q            &kp W            &kp F            &kp R             &kp B
@@ -221,6 +203,24 @@ keymap {
       // ROW 3
       &kp Z            &kp X            &kp C            &kp J             &kp V
       &kp K            &kp M            &scomma          &codot            &kp FSLH
+      // THUMBS
+      &mtb MEH DEL     &lhp NUM ESC    &mt LSHFT TAB
+                                                         &mqt RCTRL RET    &ltb NAV SPC     &mtb MEH BSPC
+    >;
+  };
+
+  ALT { 
+    // TARMAK-DH 2
+    bindings = <
+      // ROW 1
+      &kp Q            &kp W            &kp F            &kp R             &kp B
+      &kp Y            &kp U            &kp I            &kp O             &kp P
+      // ROW 2
+      &lhm LSHFT A     &lhm LCTRL S     &lhm LALT D      &lhm LGUI T       &lhm MEH G
+      &rhm MEH M       &rhm RGUI N      &rhm RALT E      &rhm RCTRL L      &rhm RSHFT SQT
+      // ROW 3
+      &kp Z            &kp X            &kp C            &kp J             &kp V
+      &kp K            &kp H            &scomma          &codot            &kp FSLH
       // THUMBS
       &mtb MEH DEL     &lhp NUM ESC    &mt LSHFT TAB
                                                          &mqt RCTRL RET    &ltb NAV SPC     &mtb MEH BSPC
